--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.show-sql=true
 
 # Drop and create new tables (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=none
+
+# Directory for file upload:
+files.upload.dir=public/images
