--- a/fishmarket-server/pom.xml
+++ b/fishmarket-server/pom.xml
@@ -2,33 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.2</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>technikal.task</groupId>
+		<artifactId>fishmarket</artifactId>
+		<version>0.0.2-SNAPSHOT</version>
 	</parent>
-	<groupId>technikal.task</groupId>
+
 	<artifactId>fishmarket-server</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>fishmarket-server</name>
-	<description>Technikal Task</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
-	<properties>
-		<java.version>17</java.version>
-	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
