--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.3.2</version>
+    <relativePath/> <!-- lookup parent from repository -->
+  </parent>
+
   <groupId>technikal.task</groupId>
   <artifactId>fishmarket</artifactId>
   <version>0.0.2-SNAPSHOT</version>
@@ -26,22 +33,20 @@
     <tag/>
     <url/>
   </scm>
+
   <properties>
-    <java.version>17</java.version>
+    <maven.compiler.source>20</maven.compiler.source>
+    <maven.compiler.target>20</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <modules>
     <module>fishmarket-shared</module>
     <module>fishmarket-server</module>
+    <module>fishmarket-pictures-uploader</module>
   </modules>
+
   <dependencies>
-    <!--
-    <dependency>
-      <groupId>com.mysql</groupId>
-      <artifactId>mysql-connector-j</artifactId>
-      <scope>runtime</scope>
-    </dependency>
-    -->
   </dependencies>
 
   <build>
